resolve character page height on mobile when browser has address bar

--- a/src/components/Characters/Characters.scss
+++ b/src/components/Characters/Characters.scss
@@ -1,6 +1,5 @@
 .character-page {
     .character-content {
-        height: 100vh;
-        max-height: -webkit-fill-available;
+        max-height: 100vh;
     }
 }
